--- a/TreasureHunt/app/src/main/res/layout/activity_maps.xml
+++ b/TreasureHunt/app/src/main/res/layout/activity_maps.xml
@@ -1,11 +1,34 @@
-<fragment xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:map="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/map"
-    android:name="com.google.android.gms.maps.SupportMapFragment"
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.treasurehunt.dinobros.treasurehunt.MapsActivity"
-    tools:layout="@layout/activity_maps" />
+    android:orientation="vertical" >
+    <EditText
+        android:id="@+id/editText1"
+        android:layout_width="match_parent"
+        android:layout_height="0px"
+        android:layout_weight="20"
+        android:inputType="text" >
+    </EditText>
+
+    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:map="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/map"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
+        android:layout_width="match_parent"
+        android:layout_height="0px"
+        android:layout_weight="70"
+        tools:context="com.treasurehunt.dinobros.treasurehunt.MapsActivity"
+        tools:layout="@layout/activity_maps" />
+
+    <Button
+        android:id="@+id/button1"
+        android:layout_width="match_parent"
+        android:layout_height="0px"
+        android:layout_weight="10"
+        android:text="Submit Clue!" />
+
+</LinearLayout>
 
 
