--- a/TreasureHunt/app/src/main/res/layout/activity_database_sandbox.xml
+++ b/TreasureHunt/app/src/main/res/layout/activity_database_sandbox.xml
@@ -11,5 +11,15 @@
         android:layout_weight="20"
         android:gravity="left" />
 
+    <ListView
+        android:id="@+id/listview_sandbox"
+        android:layout_width="match_parent"
+        android:layout_height="0px"
+        android:layout_weight="80"
+        android:dividerHeight="0.1dp"
+        android:divider="#0000CC"
+        >
+    </ListView>
+
 </LinearLayout>
 
