--- a/Gadabout/app/src/main/res/layout/activity_maps.xml
+++ b/Gadabout/app/src/main/res/layout/activity_maps.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -8,46 +8,41 @@
 
     <ImageView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="0px"
+        android:layout_weight="20"
         android:id="@+id/imageView6"
         android:src="@drawable/create"
-        android:layout_marginBottom="378dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+         />
 
     <EditText
-        android:layout_height="50dp"
-        android:layout_width="400dp"
+        android:layout_height="0px"
+        android:layout_width="match_parent"
+        android:layout_weight="10"
         android:id="@+id/editText"
         android:hint="Write your clue here."
         android:textColorHint="#DCDCDC"
-        android:layout_marginTop="139dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
         android:textColor="@color/black"
         android:textColorLink="#000000" />
 
     <fragment xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:map="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
-        android:layout_below="@id/editText"
         android:id="@+id/map"
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0px"
+        android:layout_weight="40"
         tools:context="com.treasurehunt.dinobros.treasurehunt.MapsActivity"
         tools:layout="@layout/activity_maps" />
+
     <LinearLayout
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/linear"
-        android:layout_above="@+id/linear2">
+        android:id="@+id/linear">
 
         <Button
             android:id="@+id/back"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="BACK TO MENU"
@@ -55,24 +50,24 @@
 
         <Button
             android:id="@+id/play"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="SET CLLUE" />
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/linear2"
-        android:layout_alignParentBottom="true">
+        android:id="@+id/linear2">
 
         <Button
             android:id="@+id/save"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="SAVE MAP"
             android:onClick="saveMap"/>
     </LinearLayout>
-</RelativeLayout>
+</LinearLayout>
 
