--- a/Gadabout/app/src/main/res/layout/activity_done_game.xml
+++ b/Gadabout/app/src/main/res/layout/activity_done_game.xml
@@ -1,48 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     android:background="#FFFFFF"
-    tools:context="com.example.sudipta.gadabout.DoneGame">
+    tools:context="com.example.sudipta.gadabout.DoneGame"
+    android:orientation="vertical">
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="0px"
+        android:layout_weight="70"
+        android:layout_gravity="center"
         android:id="@+id/imageView4"
-        android:src="@drawable/fin"
-        android:layout_marginBottom="226dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:src="@drawable/fin" />
 
     <TextView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="0px"
+        android:layout_weight="20"
+        android:layout_gravity="center"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="YOUR TOTAL: 120 Coins"
         android:id="@+id/textView4"
-        android:textColor="#000000"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="197dp" />
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/linear"
-        android:layout_alignParentBottom="true">
+        android:textColor="#000000" />
 
-        <Button
-            android:id="@+id/next"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:onClick="back"
-            android:text="MAIN MENU"
-            android:enabled="true" />
-    </LinearLayout>
-</RelativeLayout>
+    <Button
+        android:id="@+id/next"
+        android:layout_width="match_parent"
+        android:layout_height="0px"
+        android:layout_weight="10"
+        android:layout_gravity="center"
+        android:onClick="back"
+        android:text="MAIN MENU"
+        android:enabled="true" />
+</LinearLayout>
