--- a/Gadabout/app/src/main/res/layout/activity_game_play.xml
+++ b/Gadabout/app/src/main/res/layout/activity_game_play.xml
@@ -1,42 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     android:background="#FFFFFF"
-    tools:context="com.example.sudipta.gadabout.GamePlay">
+    tools:context="com.example.sudipta.gadabout.GamePlay"
+    android:orientation="vertical">
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="0px"
+        android:layout_weight="30"
+        android:layout_gravity="center"
         android:id="@+id/imageView3"
-        android:src="@drawable/logo_black_sm"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="385dp" />
+        android:src="@drawable/logo_black_sm" />
 
     <TextView
         android:layout_width="wrap_content"
-        android:layout_height="200dp"
+        android:layout_height="0px"
+        android:layout_weight="30"
+        android:layout_gravity="center"
         android:text="CURRENT MAP: UVA Treasure Hunt \nCLUE 01: Find this place."
         android:id="@+id/textView"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="145dp"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
+        android:textColor="#000000"
+        android:textSize="20dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="0px"
+        android:layout_weight="20"
+        android:layout_gravity="center"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="NOPE, NOT QUITE."
+        android:id="@+id/textView2"
+        android:textColor="#000000"
+        android:textSize="40dp"
+        android:textAlignment="center" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="0px"
+        android:layout_weight="10"
+        android:layout_gravity="center"
+        android:text="Getting colder!"
+        android:id="@+id/textView3"
+        android:layout_centerHorizontal="true"
         android:textColor="#000000"
         android:textSize="20dp" />
 
     <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="0px"
+        android:layout_weight="10"
         android:id="@+id/linear"
         android:layout_alignParentBottom="true">
 
@@ -64,26 +79,4 @@
             android:text="NEXT CLUE"
             android:enabled="false" />
     </LinearLayout>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="NOPE, NOT QUITE."
-        android:id="@+id/textView2"
-        android:layout_below="@+id/textView"
-        android:layout_centerHorizontal="true"
-        android:textColor="#000000"
-        android:textSize="40dp"
-        android:textAlignment="center" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Getting colder!"
-        android:id="@+id/textView3"
-        android:layout_below="@+id/textView2"
-        android:layout_centerHorizontal="true"
-        android:textColor="#000000"
-        android:textSize="20dp" />
-</RelativeLayout>
+</LinearLayout>
