--- a/Gadabout/app/src/main/res/layout/activity_play_map.xml
+++ b/Gadabout/app/src/main/res/layout/activity_play_map.xml
@@ -1,32 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     android:background="#FFFFFFFF"
-    tools:context="com.example.sudipta.gadabout.PlayMap">
+    tools:context="com.example.sudipta.gadabout.PlayMap"
+    android:orientation="vertical">
+
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="0px"
+        android:layout_weight="30"
         android:id="@+id/imageView"
         android:src="@drawable/playmap1"
         android:adjustViewBounds="true"
         android:maxWidth="750dp"
         android:maxHeight="750dp"
-        android:scaleType="fitCenter"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:scaleType="fitCenter" />
 
     <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/linear"
-        android:layout_alignParentBottom="true">
+        android:layout_width="match_parent"
+        android:layout_height="0px"
+        android:layout_weight="10"
+        android:id="@+id/linear">
+
+        <EditText
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:layout_weight="2"
+            android:id="@+id/editText"
+            android:textColor="@color/black" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="SEARCH"
+            android:id="@+id/button4"
+            />
+    </LinearLayout>
+
+
+
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="0px"
+        android:layout_weight="50"
+        android:id="@+id/listView"
+        android:background="@color/black"
+         />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0px"
+        android:layout_weight="10"
+        android:id="@+id/linear2">
 
         <Button
             android:id="@+id/back"
@@ -45,33 +73,4 @@
             android:text="PLAY MAP" />
     </LinearLayout>
 
-    <EditText
-        android:layout_height="50dp"
-        android:layout_width="250dp"
-        android:id="@+id/editText"
-        android:layout_marginTop="139dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:textColor="@color/black" />
-
-    <Button
-        android:layout_width="150dp"
-        android:layout_height="50dp"
-        android:text="SEARCH"
-        android:id="@+id/button4"
-        android:layout_alignTop="@+id/editText"
-        android:layout_toRightOf="@+id/editText"
-        android:layout_toEndOf="@+id/editText" />
-
-    <ListView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/listView"
-        android:background="@color/black"
-        android:layout_below="@+id/editText"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_above="@+id/linear" />
-
-</RelativeLayout>
+</LinearLayout>
