--- a/Gadabout/app/src/main/res/layout/activity_browse_maps.xml
+++ b/Gadabout/app/src/main/res/layout/activity_browse_maps.xml
@@ -14,32 +14,31 @@
         android:id="@+id/imageView5"
         android:src="@drawable/browse" />
 
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="0px"
+        android:layout_weight="30"
+        android:id="@+id/editText"
+        android:textColor="#000000"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0px"
         android:layout_weight="10"
-        android:id="@+id/linear"
-        android:layout_alignParentBottom="true">
-
-        <EditText
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:layout_weight="3"
-            android:id="@+id/editText"
-            android:textColor="@color/black" />
+        android:id="@+id/linear3">
 
         <Button
-            android:layout_height="wrap_content"
+            android:id="@+id/load"
             android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="load"
             android:layout_weight="1"
-            android:text="SEARCH"
-            android:id="@+id/button4" />
+            android:text="LOAD MAP" />
     </LinearLayout>
-
     <ListView
         android:layout_width="match_parent"
         android:layout_height="0px"
-        android:layout_weight="50"
+        android:layout_weight="30"
         android:id="@+id/listView"
         android:choiceMode="singleChoice"
         android:listSelector="#666666"
@@ -52,19 +51,12 @@
         android:id="@+id/linear2">
 
         <Button
-            android:id="@+id/back"
+            android:id="@+id/send"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:onClick="send"
             android:layout_weight="1"
-            android:text="BACK TO MENU"
-            android:onClick="back"/>
-
-        <Button
-            android:id="@+id/play"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:onClick="getMap"
-            android:layout_weight="1"
-            android:text="DOWNLOAD MAP" />
+            android:text="SEND MAP" />
     </LinearLayout>
+
 </LinearLayout>
