--- a/Gadabout/app/src/main/res/layout/activity_main.xml
+++ b/Gadabout/app/src/main/res/layout/activity_main.xml
@@ -54,7 +54,7 @@
     <Button
         android:layout_height="50dp"
         android:layout_width="150dp"
-        android:text="BROWSE MAPS"
+        android:text="SHARE AND LOAD"
         android:onClick="browseMaps"
         android:id="@+id/button3"
         android:layout_below="@+id/button2"
