--- a/Gadabout/app/src/main/res/layout/activity_save_map.xml
+++ b/Gadabout/app/src/main/res/layout/activity_save_map.xml
@@ -56,7 +56,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="BACK"
+            android:text="CANCEL"
             android:onClick="back"/>
 
         <Button
@@ -65,6 +65,6 @@
             android:layout_height="wrap_content"
             android:onClick="save"
             android:layout_weight="1"
-            android:text="DONE" />
+            android:text="SAVE" />
     </LinearLayout>
 </LinearLayout>
