--- a/Gadabout/app/src/main/res/layout/activity_main.xml
+++ b/Gadabout/app/src/main/res/layout/activity_main.xml
@@ -59,5 +59,12 @@
         android:id="@+id/button3"
         android:layout_below="@+id/button2"
         android:layout_centerHorizontal="true" />
+    <TextView
+        android:layout_width="500dp"
+        android:layout_height="50dp"
+        android:id="@+id/credits"
+        android:text = "Created by Sudipta Quabili and Oscar Sandoval, 2016."
+        android:layout_alignParentBottom = "true"
+        android:textColor="#000000"/>
 
 </RelativeLayout>
